--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
     font-weight: 900 !important;
     font-size: 1.5rem;
     letter-spacing: -1px;
-    color: #0046ff !important;
+    color: #0A246A  !important;
 }
 
 /* 3. 공통 섹션 헤더 (about, business, service 공통) */
