--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ body {
 .main-title-sub {
     color: #ffffff !important;      /* 흰색 */
     font-size: 1.2em;               /* 기존보다 약 20% 크게 */
-    font-family: 'Arial Black', sans-serif; /*  굵고 강조된 글씨체 */
+    /* font-family: 'Arial Black', sans-serif;   굵고 강조된 글씨체 */
     letter-spacing: 2px;            /* 글자 간격 넓게 해서 가독성 업 */
     display: inline-block;
     margin-bottom: 10px;
